syntax = "proto3";

option java_package = "com.example.hiomiai.protobuf";

package com.hiomiai.protobuf; // the Java package name

message UploadCreatedEvent {
  string Upload_id = 1;
  string Image_Id = 2;  //this is just the image name
  string user_id = 3;
}